# ohara

./: .gitignore  CLAUDE.md  FEATURES.md  README.md
backend/: main.py  pyproject.toml  render.yaml
backend/migrations/: env.py
backend/migrations/versions/: 92743bcab4b1_create_content_table.py  b1a9f3c2d4e5_create_project_tables.py  c2b8e4a1f6d3_add_content_search_vector.py
backend/src/: main.py
backend/src/content/: worker.py
backend/src/content/application/: capture_content.py
backend/src/content/domain/: ai_provider.py  content.py  enums.py  extraction.py  reading_time.py  repository.py
backend/src/content/infrastructure/: mapping.py  models.py  repository.py
backend/src/content/infrastructure/ai_providers/: gemini_provider.py  openai_provider.py  prompts.py  selector.py
backend/src/content/infrastructure/extractors/: firecrawl_extractor.py  readability_extractor.py  registry.py  yt_dlp_extractor.py
backend/src/content/presentation/: dependencies.py  router.py  schemas.py
backend/src/projects/domain/: project.py  repository.py
backend/src/projects/infrastructure/: mapping.py  models.py  repository.py
backend/src/projects/presentation/: router.py  schemas.py
backend/tests/: test_ai_enrichment.py  test_capture_endpoint.py  test_content_entity.py  test_content_repository.py  test_processing_pipeline.py  test_projects.py  test_reader_api.py  test_recommendations.py  test_search.py
mobile/: .env.example  app.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
mobile/app/: _layout.tsx  capture.tsx  index.tsx  settings.tsx  (+1 more)
(+167 files in other folders)
