[project]
name = "ohara-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "lxml[html_clean]>=5.3.0",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "readability-lxml>=0.8.4.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
    "yt-dlp>=2026.7.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
